[build-system]
requires = [
    "setuptools>=77.0.0",
    "setuptools_scm>=8.0.0",
    "numpy>=2.0.0",
    "cython>=3.0.0, <4"
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
version_file = "lib/mpdaf/_version.py"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["lib"]
norecursedirs = [
    ".*",
    "docs[\\/]_build",
    "docs[\\/]generated",
    "astropy[\\/]extern",
    "astropy[\\/]_dev",
]
addopts = [
    "--doctest-modules",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = [
    # action:message:category:module:lineno
    # "error",
    "ignore::astropy.io.fits.verify.VerifyWarning",
    "ignore::astropy.units.UnitsWarning",
    "ignore::astropy.wcs.FITSFixedWarning",
]
markers = ["slow"]

[tool.ruff.lint]
select = [
  "E", "F", "W", # flake8
  # "I",           # isort
  # "UP",          # pyupgrade
]
ignore = [
    "E501", # Line too long
    "E731", # lambda-assignment
    "E741", # ambiguous-variable-name
]
unfixable = [
  "F841", # Removes unused variables
]
