[tool:pytest]
minversion = 3.0.0
addopts = --doctest-modules -m 'not slow'
norecursedirs = ".tox" "build" "docs[\/]build"
testpaths = lib
filterwarnings =
    ignore::astropy.io.fits.verify.VerifyWarning
    ignore::astropy.units.UnitsWarning
    ignore::astropy.wcs.FITSFixedWarning

[flake8]
ignore = E731
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[metadata]
license_file = LICENSE
