[tool:pytest]
minversion = 3.0.0
addopts = --doctest-modules
norecursedirs = ".tox" "build" "docs[\/]build"
testpaths = lib
filterwarnings =
    ignore::astropy.io.fits.verify.VerifyWarning
    ignore::astropy.units.UnitsWarning
    ignore::astropy.wcs.FITSFixedWarning
markers =
    slow: slow tests

[flake8]
ignore = E731,W504

[metadata]
license_file = LICENSE
